<resources>
    <string name="app_name">Stop It!</string>
    <string name="action_settings">Settings</string>
    <string name="notification_title">Stop It!</string>
    <string name="notification_message_ok">Ready to create audio bookmarks</string>
    <string name="notification_message_perms_missing">Service not ready yet, missing permissions, see settings dialog!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_bookmarks_yet">No bookmarks stored yet!</string>
    <string name="unknown_app_name">unknown</string>

    <!-- Preference categories -->
    <string name="service_header">Background service</string>
    <string name="bookmark_header">Action on bookmark creation</string>

    <!-- Service preferences -->
    <string name="permissions_title">Permissions</string>
    <string name="service_state">Service state</string>
    <string name="permission_required">Notification access not granted yet. Click to open the
        Android system settings where you need to grant notification access to
        "Stop It!"</string>
    <string name="permission_granted">Notification access was granted. Click this item again to revoke
        notification access (deselect "Stop It!")</string>
    <string name="foreground_service">Foreground service</string>
    <string name="foreground_service_disabled">Stop It\'s service is in the background. Click to show
        a permanent notification while Stop It\'s background service is running. This increases the
        stability of the application!</string>
    <string name="foreground_service_enabled">Stop It\'s background service is shown by a
        permanent notification. This increases the stability of the application. Click to deactivate
        this notification.</string>
    <string name="pause_play_min_delay">Minimum pause-play interval</string>
    <string name="pause_play_min_delay_summary">Min. seconds between pressing pause and play.
        Too small values may cause spurious detections. 0.3 s or more are recommended. Current value: %1$.3f s
        </string>
    <string name="pause_play_max_delay">Maximum pause-play interval</string>
    <string name="pause_play_max_delay_summary">Max. seconds between pressing pause and play.
        Current value: %1$.3f s</string>
    <string name="pause_play_notification_lookback">Max. notification lookback time</string>
    <string name="max_notification_lookback_millis_summary">Max. time interval to look for
        past notifications caused by other apps. Increase if notifications accidentally cause audio
        bookmarks.  Current value: %1$.3f s</string>


    <!-- Bookmark Preferences -->
    <string name="vibrate">Vibrate</string>
    <string name="vibrate_duration">Vibration duration</string>
    <string name="vibrate_summary">%1$.3f s</string>
    <string name="play_sound">Play sound</string>

    <!-- Content descriptions -->
    <string name="app_icon_desc">Icon of the player application</string>
    <string name="play_button_desc">Play button to play back the bookmark</string>
    <string name="delete_button_desc">Delete button to delete the bookmark</string>

    <!-- Dummy sample texts -->
    <string name="track_text_sample">Some track name</string>
    <string name="artist_text_sample">Some artist</string>
    <string name="position_sample">12:43</string>

    <!-- App info dialog texts -->
    <string name="app_info_title">App information</string>
    <string name="app_info_close_button_text">OK</string>
    <string name="app_info_app_name_label">Name: </string>
    <string name="app_info_app_name_sample">Some app name</string>
    <string name="app_info_package_label">Package: </string>
    <string name="app_info_package_sample">org.some.app</string>
    <string name="open_app">Open app</string>
    <string name="open_store">Install (Google Play)</string>
</resources>
